--- a/foundations/smth/index.pug
+++ b/foundations/smth/index.pug
@@ -26,7 +26,7 @@ block content
                     The $\mathbf{SmthSet}$ type models smooth sets, sheaves on the site of Cartesian
                     spaces $\{\mathbb{R}^n\}_{n : \mathbf{Nat}}$, representing generalized smooth
                     manifolds. Smooth sets underpin differential geometry, gauge theory, and smooth
-                    homotopy in the cohesive type system.
+                    homotopy in the cohesive type system of $\mathbf{Urs}$.
                 +tex.
                     The $\mathbf{SmthSet}$ type is a parameterless type in $\mathbf{U_1}$, with plots
                     $\mathbf{plt}_n(X)$ defining smooth maps $\mathbb{R}^n \to X$ for a smooth set
