--- a/index.pug
+++ b/index.pug
@@ -33,7 +33,7 @@ block content
                 +tex.
                     Type theory has emerged as a powerful language for mathematics
                     and physics, unifying computation, logic, and structure. This
-                    article introduces a three-layered type theory that extends
+                    article introduces a layered type theory that extends
                     Martin-Löf’s intensional type theory into a framework capable
                     of capturing homotopy, cohesion, and supergeometry:
 
