--- a/index.pug
+++ b/index.pug
@@ -75,7 +75,7 @@ block content
                             li: a(href='https://urs.groupoid.space/foundations/supsmth/') SUPSMTH
 
                     .macro__col
-                        h3#mltt <b>DIFF</b>
+                        h3#mltt <b>DIFF-K</b>
                         ol
                             li: a(href='https://urs.groupoid.space/foundations/spectra/') SPECTRA
                             li: a(href='https://urs.groupoid.space/foundations/grpd/') GRPD
