--- a/index.pug
+++ b/index.pug
@@ -151,7 +151,7 @@ block content
                     A cohesive, graded extension of type theory infused with supergeometry,
                     where types inhabit universes indexed by parity, symmetry, and smoothness.
                     Using $\mathbf{U_n^g}$, $\mathfrak{s}$, $\mathbf{\flat}$, $\mathbf{\sharp}$, $\mathbf{\bigcirc}$,
-                    $\mathbf{\Im}$, $\mathbf{\otimes}$, $\mathbf{SmthSet}$, and $\mathbf{SupSmthSet}$,
+                    $\mathbf{\Im}$, $\mathbf{\otimes}$, $\mathbf{Smth}$, and $\mathbf{SupSmth}$,
                     it equips types with tensor structures, group actions, and super-modality
                     operators to model differential cohesion, infinitesimal geometry,
                     and graded symmetries. This system unifies the logic of supermanifolds,
