--- a/index.pug
+++ b/index.pug
@@ -123,7 +123,7 @@ block content
                        \mathrm{Diff} := \mathbf{Diff}\ |\ \mathbf{KU_\flat^G}\ |\ \mathbf{KU^G}\ \\
                        \mathrm{Grpd} := \mathbf{Grpd}\ |\ \mathbf{\Delta^n}\ |\ \mathbf{Grpd^n_{Ind}}\ \\
                        \mathrm{Quantum} := \mathbf{Conf^n}\ |\ \mathbf{Braid}\ |\ \mathbf{Linear}\ \\
-                                    \mathbf{Qubit}\ |\ \mathbf{appQubit}\ |\ \mathbf{fuseQubit}\ 
+                                    \mathbf{Qubit}\ |\ \mathbf{appQubit}\ |\ \mathbf{fuseQubit} \\
                        \\
                     \end{array}
                     $$
