--- a/index.pug
+++ b/index.pug
@@ -3,7 +3,7 @@ include header
 html
     head
         meta(property='og:title'       content='URS')
-        meta(property='og:description' content='Cohesive Type Theory')
+        meta(property='og:description' content='Super Type Theory')
         meta(property='og:url'         content='https://urs.groupoid.space/')
 
 block title
